@@ -108,6 +108,7 @@ Version 1.4.2
        instead of the revision shown in the repository browser.
        See issue #290 for details. (Stefan)
 - BUG: The column "SVN Author" was not available to choose from. (Stefan)
+- BUG: The URL in the merge dialog was not shown unescaped. (Stefan)
 
 Version 1.4.1
 - NEW: TortoiseMerge can now handle files with CR lineendings. (Stefan)
